--- a/GOT DeathPredictor.ipynb
+++ b/GOT DeathPredictor.ipynb
@@ -713,12 +713,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I count print confusion matrix here!\n"
+      "I couldn't print confusion matrix here!\n"
      ]
     }
    ],
    "source": [
-    "print ('I count print confusion matrix here!')"
+    "print ('I couldn't print confusion matrix here!')"
    ]
   },
   {
